tests/errors/type_check/place_typing/place_deref_of_non_ref.sim

        fn f(y: i64) {
            x: i64;
            entry:
            x = copy y.*;
            return
        }
        